--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 .body {
     text-align: center;
 }
+
+.sketckPad {
+    display: flex;
+    background-color: blue;
+}
+
+.sketchCell {
+    background-color: red;
+}
