--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 #sketchPad {
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    /*background-color: blue;*/
 }
 
 .sketchCell {
